--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,5 +3,6 @@ version: '${project.version}'
 main: playerjoinleave.playerjoinleave.PlayerJoinLeave
 api-version: 1.18
 authors: [ tw_abc ]
+softdepend: [ PlaceholderAPI ]
 commands:
-  playerjoinleavereload:
+  joinleave:
