--- a/src/main/resources/about.yml
+++ b/src/main/resources/about.yml
@@ -1,5 +1,5 @@
 #####################################
-# Plugin name: Playerjoinleave      #
+# Plugin name: PlayerMessage      #
 # Author: tw_abc                    #
 # Github: https://github.com/twabc  #
 # Version: 1.0                      #
